--- a/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
@@ -11,7 +11,7 @@ metadata:
     - go
 spec:
   owner: engin@pulumi.com
-  type: infrastructure
+  type: service
   parameters:
     - title: Provide project informations
       required:
