feat: add scaleway

--- a/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
@@ -35,6 +35,7 @@ spec:
           ui:options:
             allowedKinds:
               - Group
+              - User
     - title: Choose a location
       required:
         - repoUrl
