--- a/scaffolder-templates/scaleway-go-pulumi-template/skeleton/Pulumi.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/skeleton/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: "${{ values.component_id }}"
+name: ${{ values.component_id }}
 runtime: go
-description: "${{ values.description }}"
+description: ${{ values.description }}
