--- a/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
@@ -64,3 +64,18 @@ spec:
         repoVisibility: public
         description: This is ${{ parameters.component_id }}
         repoUrl: ${{ parameters.repoUrl }}
+
+    - id: register
+      name: Registering the Catalog Info Component
+      action: catalog:register
+      input:
+        repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
+        catalogInfoPath: '/catalog-info.yaml'
+
+  output:
+    links:
+      - title: Open the Source Code Repository
+        url: ${{ steps['publish'].output.repoContentsUrl }}
+      - title: Open the Catalog Info Component
+        icon: catalog
+        entityRef: ${{ steps['register'].output.entityRef }}
