feat: add scaleway

--- a/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
@@ -56,6 +56,9 @@ spec:
         values:
           component_id: ${{ parameters.component_id }}
           description: ${{ parameters.description }}
+          destination: ${{ parameters.repoUrl | parseRepoUrl }}
+          owner: ${{ parameters.owner }}
+
     - id: publish
       name: Publish
       action: publish:github
