feat: add scaleway

--- a/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
+++ b/scaffolder-templates/scaleway-go-pulumi-template/template.yaml
@@ -67,6 +67,7 @@ spec:
         repoVisibility: public
         description: This is ${{ parameters.component_id }}
         repoUrl: ${{ parameters.repoUrl }}
+        defaultBranch: main
 
     - id: register
       name: Registering the Catalog Info Component
