feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -97,6 +97,7 @@ spec:
           - "-d \"${{ parameters.description }}\""
           - "-s ${{ parameters.stack }}"
           - "-y"
+          - "--force"
           - ${{ parameters.args }}
 
     - id: publish
