--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -7,6 +7,7 @@ metadata:
   {% endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
+    pulumi.com/project-slug: ${{values.component_id | dump}}
     backstage.io/techdocs-ref: dir:.
 spec:
   type: infrastructure
