feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -128,7 +128,7 @@ spec:
         repoBranch: main
         repoProjectPath: .
         organization: ediri
-        stack: ${{ parameters.stack }}
+        stacks: ${{ parameters.stack }}
         args:
           - ${{ parameters.args }}
 
