--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -124,6 +124,7 @@ spec:
         new: false
         deployment: true
         up: true
+        name: ${{ parameters.component_id }}
         repoUrl: "https://github.com/${{ (parameters.repoUrl | parseRepoUrl)['owner'] }}/${{ (parameters.repoUrl | parseRepoUrl)['repo'] }}"
         repoBranch: main
         repoProjectPath: .
