feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -141,7 +141,7 @@ spec:
         repoProjectPath: .
         organization: ediri
         config:
-          "civo:region": "lon1",
+          "civo:region": "lon1"
           "civo:token": "${{ parameters.token}}"
         output:
           - kubeconfig
