--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -143,7 +143,7 @@ spec:
         config:
           "civo:region": "lon1"
           "civo:token": "${{ parameters.token}}"
-        output:
+        outputs:
           - kubeconfig
         stacks: ${{ parameters.stack }}
         args:
