--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -105,7 +105,7 @@ spec:
           destination: ${{ parameters.repoUrl | parseRepoUrl }}
           owner: ${{ parameters.owner }}
 
-    - id: pulumi-new
+    - id: pulumi-new-infrastucture
       name: Run Pulumi new (infrastructure)
       action: pulumi:run
       input:
@@ -119,7 +119,7 @@ spec:
           - ${{ parameters.args }}
           - "-dir infrastructure"
 
-    - id: pulumi-new
+    - id: pulumi-new-service
       name: Run Pulumi new (service)
       action: pulumi:run
       input:
