--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -133,6 +133,12 @@ spec:
           - ${{ parameters.args }}
           - "--dir service"
 
+    - id: wait
+      name: Wait for Pulumi to finish
+      action: debug:wait
+      input:
+        seconds: 29
+
     - id: publish
       name: Publish to GitHub
       action: publish:github
