--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -150,7 +150,7 @@ spec:
         repoUrl: ${{ parameters.repoUrl }}
         defaultBranch: main
 
-    - id: wait
+    - id: wait2
       name: Wait for Publish to finish
       action: debug:wait
       input:
