feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -14,7 +14,7 @@ metadata:
     - pulumi
     - microservice
     - kubernetes
-    - GitHub
+    - github
     - argocd
 spec:
   owner: user:dirien
