--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -150,9 +150,7 @@ spec:
         repoUrl: ${{ parameters.repoUrl }}
         defaultBranch: main
         requiredApprovingReviewCount: 0
-        bypassPullRequestAllowances:
-          users:
-            - actions-user
+        protectDefaultBranch: false
 
     - id: wait2
       name: Wait for Publish to finish
